Added a simple drop down menu

--- a/apps/desktop/public/locales/nl/common.json
+++ b/apps/desktop/public/locales/nl/common.json
@@ -1,4 +1,12 @@
 {
+  "language": {
+    "tags": {
+      "en": "en",
+      "nl": "nl"
+    },
+    "english": "Engels",
+    "dutch": "Nederlands"
+  },
   "date": {
     "weekdays": {
       "0": "zondag",
