--- a/apps/desktop/public/locales/en/common.json
+++ b/apps/desktop/public/locales/en/common.json
@@ -1,4 +1,12 @@
 {
+  "language": {
+    "tags": {
+      "en": "en",
+      "nl": "nl"
+    },
+    "english": "English",
+    "dutch": "Dutch"
+  },
   "date": {
     "weekdays": {
       "0": "sunday",
