Added a button to create new folders (access rights still wip) & Fixed a bug regarding opening a new finder window from a path with a space in between

--- a/apps/desktop/public/locales/en/common.json
+++ b/apps/desktop/public/locales/en/common.json
@@ -1,4 +1,8 @@
 {
+  "filesystem": {
+    "new_directory": "untitled folder",
+    "new_file": "untitled file"
+  },
   "language": {
     "tags": {
       "en": "en",
