--- a/apps/desktop/public/locales/nl/common.json
+++ b/apps/desktop/public/locales/nl/common.json
@@ -1,4 +1,8 @@
 {
+  "filesystem": {
+    "new_directory": "naamloze folder",
+    "new_file": "naamloos bestand"
+  },
   "language": {
     "tags": {
       "en": "en",
