Added a dialog for the file name when saving a note for the first time

--- a/apps/desktop/public/locales/en/common.json
+++ b/apps/desktop/public/locales/en/common.json
@@ -15,6 +15,10 @@
     "create_directory_instructions": "Enter the name of the new directory",
     "create_directory_duplicated_name": "The given name is already taken. Please choose a different name"
   },
+  "notes": {
+    "create_file_instructions": "Enter the name of the new text file",
+    "create_file_duplicated_name": "The given name is already taken. Please choose a different name"
+  },
   "date": {
     "weekdays": {
       "0": "sunday",
