--- a/apps/desktop/public/locales/nl/common.json
+++ b/apps/desktop/public/locales/nl/common.json
@@ -12,6 +12,7 @@
     "dutch": "Nederlands"
   },
   "finder": {
+    "favorites": "Favorieten",
     "create_directory_instructions": "Vul de naam in voor de nieuwe folder",
     "create_directory_duplicated_name": "De gegeven naam bestaat al. Kies een andere naam"
   },
