--- a/apps/desktop/public/locales/nl/common.json
+++ b/apps/desktop/public/locales/nl/common.json
@@ -11,6 +11,10 @@
     "english": "Engels",
     "dutch": "Nederlands"
   },
+  "image": {
+    "no_image_to_load": "Er is geen afbeelding om te laden. Klik op een afbeelding om de applicatie te openen",
+    "loading": "Laden..."
+  },
   "finder": {
     "favorites": "Favorieten",
     "create_directory_instructions": "Vul de naam in voor de nieuwe folder",
