Added a basic loading screen for the Dos emulator

--- a/apps/desktop/public/locales/en/common.json
+++ b/apps/desktop/public/locales/en/common.json
@@ -23,6 +23,9 @@
     "message": "Message",
     "send": "Send"
   },
+  "dos_emulator": {
+    "loading": "Loading"
+  },
   "finder": {
     "favorites": "Favorites",
     "create_text_file_instructions": "Enter the name of the text file",
