--- a/apps/desktop/public/locales/en/common.json
+++ b/apps/desktop/public/locales/en/common.json
@@ -23,6 +23,8 @@
     "message": "Message",
     "send": "Send",
     "processed": "An email has been send to my inbox!",
+    "message_forwarding_instructions": "All messages will be forwarded straight to my personal inbox",
+    "required": "Required",
     "error": {
       "invalid-email": "Please enter a valid email."
     }
