--- a/apps/desktop/public/locales/nl/common.json
+++ b/apps/desktop/public/locales/nl/common.json
@@ -41,6 +41,15 @@
     "create_file_instructions": "Vul de naam in voor het nieuwe bestand",
     "create_file_duplicated_name": "De gegeven naam bestaat al. Kies een andere naam"
   },
+  "about": {
+    "navigation": {
+      "home": "Home",
+      "about": "Over mij",
+      "experience": "Ervaring",
+      "projects": "Projecten",
+      "contact": "Contact"
+    }
+  },
   "date": {
     "weekdays": {
       "0": "zondag",
