--- a/apps/desktop/public/locales/nl/common.json
+++ b/apps/desktop/public/locales/nl/common.json
@@ -48,6 +48,11 @@
       "experience": "Ervaring",
       "projects": "Projecten",
       "contact": "Contact"
+    },
+    "download_cv": {
+      "title": "Opzoek naar mijn CV?",
+      "instruction": "Klik hier om hem te downloaden!",
+      "download_link": "/cv/CV_Joey_de_Ruiter_nl.pdf"
     }
   },
   "date": {
