--- a/apps/desktop/public/locales/nl/common.json
+++ b/apps/desktop/public/locales/nl/common.json
@@ -15,6 +15,20 @@
     "no_image_to_load": "Er is geen afbeelding om te laden. Klik op een afbeelding om de applicatie te openen",
     "loading": "Laden..."
   },
+  "algorithms": {
+    "start": "Start",
+    "stop": "Stop",
+    "regenerate": "Opnieuw genereren",
+    "return_to_overview": "Terug naar overzicht",
+    "sorting_options": "Sorteer opties",
+    "data_generation_strategy": "Data generatie strategie",
+    "data_generation_options": {
+      "randomly_distributed": "Willekeurig verdeeld",
+      "sorted_left_to_right": "Gesorteerd van links naar rechts",
+      "sorted_right_to_left": "Gesorteerd van rechts naar links"
+    },
+    "data_generation_points": "Gegevens punten"
+  },
   "contact": {
     "name": "Naam",
     "email": "E-mail",
