--- a/apps/desktop/public/locales/en/common.json
+++ b/apps/desktop/public/locales/en/common.json
@@ -22,6 +22,13 @@
     "return_to_overview": "Return to overview",
     "sorting_options": "Sorting options",
     "data_generation_strategy": "Data generation strategy",
+    "path_finding_width": "Path finding area width",
+    "path_finding_height": "Path finding area height",
+    "path_finding_generation_options": {
+      "maze": "Maze",
+      "open_field": "Open field",
+      "pipes": "Pipes"
+    },
     "data_generation_options": {
       "randomly_distributed": "Randomly distributed",
       "sorted_left_to_right": "Sorted left to right",
